put some more testing in

--- a/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/Topshelf.Specs/Topshelf.Specs.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Configuration\HostConfigurator.cs" />
     <Compile Include="Configuration\HostConfigurator_Specs.cs">
     </Compile>
+    <Compile Include="Configuration\Host_Specs.cs" />
     <Compile Include="Configuration\IHost.cs" />
     <Compile Include="Configuration\IHostConfigurator.cs" />
     <Compile Include="Configuration\IService.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Configuration\ServiceConfigurator.cs" />
     <Compile Include="Configuration\ServiceState.cs" />
     <Compile Include="Configuration\Service_Specs.cs" />
+    <Compile Include="Configuration\TestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
