moving stuff around, renaming

--- a/Topshelf/Topshelf.csproj
+++ b/Topshelf/Topshelf.csproj
@@ -72,15 +72,15 @@
     <Compile Include="ArgumentParsing\IArgumentMapFactory.cs" />
     <Compile Include="ArgumentParsing\IArgumentParser.cs" />
     <Compile Include="Configurations\WinServiceConfiguration.cs" />
-    <Compile Include="Configuration\Host.cs" />
+    <Compile Include="Internal\ServiceCoordinator.cs" />
     <Compile Include="Configuration\HostConfigurator.cs" />
-    <Compile Include="Configuration\IHost.cs" />
+    <Compile Include="IServiceCoordinator.cs" />
     <Compile Include="Configuration\IHostConfigurator.cs" />
-    <Compile Include="Configuration\IService.cs" />
+    <Compile Include="IService.cs" />
     <Compile Include="Configuration\IServiceConfigurator.cs" />
-    <Compile Include="Configuration\Service.cs" />
+    <Compile Include="Internal\Service.cs" />
     <Compile Include="Configuration\ServiceConfigurator.cs" />
-    <Compile Include="Configuration\ServiceState.cs" />
+    <Compile Include="ServiceState.cs" />
     <Compile Include="Credentials.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
     <Compile Include="HostServiceInstaller.cs">
@@ -93,7 +93,6 @@
     <Compile Include="Hosts\WinFormHost.cs" />
     <Compile Include="IAction.cs" />
     <Compile Include="IApplicationLifeCycle.cs" />
-    <Compile Include="IHostedService.cs" />
     <Compile Include="IInstallationConfiguration.cs" />
     <Compile Include="Insturmentation\BasicServiceInstrumentation.cs" />
     <Compile Include="IStartUpTime.cs" />
