cleaning out the old concepts

--- a/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/Topshelf.Specs/Topshelf.Specs.csproj
@@ -58,8 +58,8 @@
     <Compile Include="BddExtensions.cs" />
     <Compile Include="Configuration\HostConfigurator_Specs.cs">
     </Compile>
-    <Compile Include="Configuration\Host_Specs.cs" />
-    <Compile Include="Configuration\Service_Specs.cs" />
+    <Compile Include="Host_Specs.cs" />
+    <Compile Include="Service_Specs.cs" />
     <Compile Include="Configuration\TestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
