--- a/Topshelf/Topshelf.csproj
+++ b/Topshelf/Topshelf.csproj
@@ -71,7 +71,7 @@
     <Compile Include="ArgumentParsing\IArgumentMap.cs" />
     <Compile Include="ArgumentParsing\IArgumentMapFactory.cs" />
     <Compile Include="ArgumentParsing\IArgumentParser.cs" />
-    <Compile Include="Configurations\WinServiceConfiguration.cs" />
+    <Compile Include="Configuration\WinServiceConfiguration.cs" />
     <Compile Include="Internal\ServiceCoordinator.cs" />
     <Compile Include="Configuration\HostConfigurator.cs" />
     <Compile Include="IServiceCoordinator.cs" />
@@ -83,7 +83,7 @@
     <Compile Include="ServiceState.cs" />
     <Compile Include="Credentials.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
-    <Compile Include="HostServiceInstaller.cs">
+    <Compile Include="Hosts\HostServiceInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Hosts\ConsoleHost.cs" />
@@ -92,16 +92,13 @@
     </Compile>
     <Compile Include="Hosts\WinFormHost.cs" />
     <Compile Include="IAction.cs" />
-    <Compile Include="IApplicationLifeCycle.cs" />
     <Compile Include="IInstallationConfiguration.cs" />
     <Compile Include="Insturmentation\BasicServiceInstrumentation.cs" />
-    <Compile Include="IStartUpTime.cs" />
     <Compile Include="KnownServiceNames.cs" />
-    <Compile Include="LifeCycles\HostedLifecycle.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
-    <Compile Include="WinServiceSettings.cs" />
+    <Compile Include="Configuration\WinServiceSettings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
