--- a/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/Topshelf.Specs/Topshelf.Specs.csproj
@@ -58,7 +58,7 @@
     <Compile Include="BddExtensions.cs" />
     <Compile Include="Configuration\RunnerConfigurator_Specs.cs">
     </Compile>
-    <Compile Include="Credential_Specs.cs" />
+    <Compile Include="Configuration\Credential_Specs.cs" />
     <Compile Include="Host_Specs.cs" />
     <Compile Include="ServiceCoordinator_Specs.cs" />
     <Compile Include="Service_Specs.cs" />
