--- a/Topshelf/Topshelf.csproj
+++ b/Topshelf/Topshelf.csproj
@@ -60,29 +60,29 @@
     <Compile Include="Actions\RunAsWinFormAction.cs" />
     <Compile Include="Actions\ServiceNamedAction.cs" />
     <Compile Include="Actions\UninstallServiceAction.cs" />
-    <Compile Include="ArgumentParsing\Argument.cs" />
-    <Compile Include="ArgumentParsing\ArgumentAttribute.cs" />
-    <Compile Include="ArgumentParsing\ArgumentMap.cs" />
-    <Compile Include="ArgumentParsing\ArgumentMapFactory.cs" />
-    <Compile Include="ArgumentParsing\ArgumentParser.cs" />
-    <Compile Include="ArgumentParsing\ArgumentParsingException.cs" />
-    <Compile Include="ArgumentParsing\ArgumentTarget.cs" />
-    <Compile Include="ArgumentParsing\IArgument.cs" />
-    <Compile Include="ArgumentParsing\IArgumentMap.cs" />
-    <Compile Include="ArgumentParsing\IArgumentMapFactory.cs" />
-    <Compile Include="ArgumentParsing\IArgumentParser.cs" />
+    <Compile Include="Internal\ArgumentParsing\Argument.cs" />
+    <Compile Include="Internal\ArgumentParsing\ArgumentAttribute.cs" />
+    <Compile Include="Internal\ArgumentParsing\ArgumentMap.cs" />
+    <Compile Include="Internal\ArgumentParsing\ArgumentMapFactory.cs" />
+    <Compile Include="Internal\ArgumentParsing\ArgumentParser.cs" />
+    <Compile Include="Internal\ArgumentParsing\ArgumentParsingException.cs" />
+    <Compile Include="Internal\ArgumentParsing\ArgumentTarget.cs" />
+    <Compile Include="Internal\ArgumentParsing\IArgument.cs" />
+    <Compile Include="Internal\ArgumentParsing\IArgumentMap.cs" />
+    <Compile Include="Internal\ArgumentParsing\IArgumentMapFactory.cs" />
+    <Compile Include="Internal\ArgumentParsing\IArgumentParser.cs" />
     <Compile Include="Configuration\IRunConfiguration.cs" />
     <Compile Include="Configuration\RunConfiguration.cs" />
     <Compile Include="Internal\ServiceCoordinator.cs" />
     <Compile Include="Configuration\RunnerConfigurator.cs" />
     <Compile Include="IServiceCoordinator.cs" />
     <Compile Include="Configuration\IRunnerConfigurator.cs" />
-    <Compile Include="IService.cs" />
+    <Compile Include="Internal\IService.cs" />
     <Compile Include="Configuration\IServiceConfigurator.cs" />
     <Compile Include="Internal\Service.cs" />
     <Compile Include="Configuration\ServiceConfigurator.cs" />
     <Compile Include="ServiceState.cs" />
-    <Compile Include="Credentials.cs" />
+    <Compile Include="Configuration\Credentials.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
     <Compile Include="Hosts\HostServiceInstaller.cs">
       <SubType>Component</SubType>
@@ -93,10 +93,9 @@
     </Compile>
     <Compile Include="Hosts\WinFormHost.cs" />
     <Compile Include="IAction.cs" />
-    <Compile Include="IInstallationConfiguration.cs" />
     <Compile Include="Insturmentation\BasicServiceInstrumentation.cs" />
     <Compile Include="KnownServiceNames.cs" />
-    <Compile Include="Parser.cs" />
+    <Compile Include="Internal\Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
     <Compile Include="Configuration\WinServiceSettings.cs" />
