--- a/Topshelf/Topshelf.csproj
+++ b/Topshelf/Topshelf.csproj
@@ -53,13 +53,13 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actions\InstallServiceAction.cs" />
-    <Compile Include="Actions\NamedAction.cs" />
-    <Compile Include="Actions\RunAsConsoleAction.cs" />
-    <Compile Include="Actions\RunAsServiceAction.cs" />
-    <Compile Include="Actions\RunAsWinFormAction.cs" />
-    <Compile Include="Actions\ServiceNamedAction.cs" />
-    <Compile Include="Actions\UninstallServiceAction.cs" />
+    <Compile Include="Internal\Actions\InstallServiceAction.cs" />
+    <Compile Include="Internal\Actions\NamedAction.cs" />
+    <Compile Include="Internal\Actions\RunAsConsoleAction.cs" />
+    <Compile Include="Internal\Actions\RunAsServiceAction.cs" />
+    <Compile Include="Internal\Actions\RunAsWinFormAction.cs" />
+    <Compile Include="Internal\Actions\ServiceNamedAction.cs" />
+    <Compile Include="Internal\Actions\UninstallServiceAction.cs" />
     <Compile Include="Internal\ArgumentParsing\Argument.cs" />
     <Compile Include="Internal\ArgumentParsing\ArgumentAttribute.cs" />
     <Compile Include="Internal\ArgumentParsing\ArgumentMap.cs" />
@@ -92,7 +92,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Hosts\WinFormHost.cs" />
-    <Compile Include="IAction.cs" />
+    <Compile Include="Internal\IAction.cs" />
     <Compile Include="Insturmentation\BasicServiceInstrumentation.cs" />
     <Compile Include="KnownServiceNames.cs" />
     <Compile Include="Internal\Parser.cs" />
