--- a/Topshelf/Topshelf.csproj
+++ b/Topshelf/Topshelf.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1EEC6A0D-F213-4716-B5CC-33782BCE1908}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -84,7 +84,7 @@
     <Compile Include="Configuration\RunConfiguration.cs" />
     <Compile Include="Internal\ServiceCoordinator.cs" />
     <Compile Include="Configuration\RunnerConfigurator.cs" />
-    <Compile Include="IServiceCoordinator.cs" />
+    <Compile Include="Internal\IServiceCoordinator.cs" />
     <Compile Include="Configuration\IRunnerConfigurator.cs" />
     <Compile Include="Internal\IService.cs" />
     <Compile Include="Configuration\IServiceConfigurator.cs" />
