--- a/Topshelf/Topshelf.csproj
+++ b/Topshelf/Topshelf.csproj
@@ -104,7 +104,7 @@
     <Compile Include="Internal\Hosts\WinFormHost.cs" />
     <Compile Include="Internal\IAction.cs" />
     <Compile Include="Insturmentation\BasicServiceInstrumentation.cs" />
-    <Compile Include="KnownServiceNames.cs" />
+    <Compile Include="Configuration\KnownServiceNames.cs" />
     <Compile Include="Internal\Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
