--- a/src/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/src/Topshelf.Specs/Topshelf.Specs.csproj
@@ -55,6 +55,8 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IsolatedService_Specs.cs" />
+    <Compile Include="AppDomain_Specs.cs" />
     <Compile Include="BddExtensions.cs" />
     <Compile Include="Configuration\RunnerConfigurator_Specs.cs">
     </Compile>
