--- a/src/Stuff/Stuff.csproj
+++ b/src/Stuff/Stuff.csproj
@@ -59,6 +59,11 @@
       <Name>Topshelf</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="log4net.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
