--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Internal\Actions\RunAsWinFormAction.cs" />
     <Compile Include="Internal\Actions\ServiceNamedAction.cs" />
     <Compile Include="Internal\Actions\UninstallServiceAction.cs" />
+    <Compile Include="Internal\CouldntFindServiceException.cs" />
     <Compile Include="Internal\IsolatedService.cs" />
     <Compile Include="Internal\FacadeToIsolatedService.cs" />
     <Compile Include="Internal\ArgumentParsing\Argument.cs" />
@@ -88,7 +89,6 @@
     <Compile Include="Internal\ArgumentParsing\IArgumentParser.cs" />
     <Compile Include="Configuration\IRunConfiguration.cs" />
     <Compile Include="Configuration\RunConfiguration.cs" />
-    <Compile Include="Internal\ServiceControllerBase.cs" />
     <Compile Include="Internal\ServiceCoordinator.cs" />
     <Compile Include="Configuration\RunnerConfigurator.cs" />
     <Compile Include="Internal\IServiceCoordinator.cs" />
