--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Internal\Actions\RunAsWinFormAction.cs" />
     <Compile Include="Internal\Actions\ServiceNamedAction.cs" />
     <Compile Include="Internal\Actions\UninstallServiceAction.cs" />
-    <Compile Include="Internal\CouldntFindServiceException.cs" />
+    <Compile Include="Exceptions\CouldntFindServiceException.cs" />
     <Compile Include="Internal\IsolatedServiceController.cs" />
     <Compile Include="Internal\FacadeToIsolatedServiceController.cs" />
     <Compile Include="Internal\ArgumentParsing\Argument.cs" />
