adding ActivatorServiceLocator.cs

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivatorServiceLocator.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Configuration\IIsolatedServiceConfigurator.cs" />
     <Compile Include="Configuration\IsolatedServiceConfigurator.cs" />
