--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -29,7 +29,7 @@
   <property name="version.minor" value="8" overwrite="false" />
   <!-- partially trusted callers doesn't set correctly with assembly generator - Leave false for now-->
   <property name="allow.partially_trusted_callers" value="false" overwrite="false" />
-  <property name="sign.project_with_key" value="false" overwrite="false" />
+  <property name="sign.project_with_key" value="true" overwrite="false" />
 
   <!-- EXTERNAL TOOLS -->
   <!-- To not use the tool, change to a location that doesn't exist -->
