dumped old argument parsing model

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -81,32 +81,22 @@
     <Compile Include="Internal\Actions\ServiceNamedAction.cs" />
     <Compile Include="Internal\Actions\UninstallServiceAction.cs" />
     <Compile Include="Exceptions\CouldntFindServiceException.cs" />
-    <Compile Include="Internal\ControllerDelegates.cs" />
-    <Compile Include="Internal\IServiceControllerOf.cs" />
-    <Compile Include="Internal\IsolatedServiceController.cs" />
-    <Compile Include="Internal\FacadeToIsolatedServiceController.cs" />
-    <Compile Include="Internal\ArgumentParsing\Argument.cs" />
-    <Compile Include="Internal\ArgumentParsing\ArgumentAttribute.cs" />
-    <Compile Include="Internal\ArgumentParsing\ArgumentMap.cs" />
-    <Compile Include="Internal\ArgumentParsing\ArgumentMapFactory.cs" />
-    <Compile Include="Internal\ArgumentParsing\ArgumentParser.cs" />
-    <Compile Include="Internal\ArgumentParsing\ArgumentParsingException.cs" />
-    <Compile Include="Internal\ArgumentParsing\ArgumentTarget.cs" />
-    <Compile Include="Internal\ArgumentParsing\IArgument.cs" />
-    <Compile Include="Internal\ArgumentParsing\IArgumentMap.cs" />
-    <Compile Include="Internal\ArgumentParsing\IArgumentMapFactory.cs" />
-    <Compile Include="Internal\ArgumentParsing\IArgumentParser.cs" />
+    <Compile Include="Internal\TopshelfDispatcher.cs" />
+    <Compile Include="Model\ControllerDelegates.cs" />
+    <Compile Include="Model\IServiceControllerOf.cs" />
+    <Compile Include="Model\IsolatedServiceController.cs" />
+    <Compile Include="Model\FacadeToIsolatedServiceController.cs" />
     <Compile Include="Configuration\Dsl\IRunConfiguration.cs" />
     <Compile Include="Configuration\Dsl\RunConfiguration.cs" />
-    <Compile Include="Internal\IsolatedServiceControllerWrapper.cs" />
-    <Compile Include="Internal\ServiceControllerProxy.cs" />
-    <Compile Include="Internal\ServiceCoordinator.cs" />
+    <Compile Include="Model\IsolatedServiceControllerWrapper.cs" />
+    <Compile Include="Model\ServiceControllerProxy.cs" />
+    <Compile Include="Model\ServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\RunnerConfigurator.cs" />
-    <Compile Include="Internal\IServiceCoordinator.cs" />
+    <Compile Include="Model\IServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\IRunnerConfigurator.cs" />
-    <Compile Include="Internal\IServiceController.cs" />
+    <Compile Include="Model\IServiceController.cs" />
     <Compile Include="Configuration\Dsl\IServiceConfigurator.cs" />
-    <Compile Include="Internal\ServiceController.cs" />
+    <Compile Include="Model\ServiceController.cs" />
     <Compile Include="Configuration\Dsl\ServiceConfigurator.cs" />
     <Compile Include="Internal\TopshelfArgumentParser.cs" />
     <Compile Include="Internal\TopshelfArguments.cs" />
@@ -125,7 +115,6 @@
     <Compile Include="Internal\IAction.cs" />
     <Compile Include="Instrumentation\BasicServiceInstrumentation.cs" />
     <Compile Include="Configuration\Dsl\KnownServiceNames.cs" />
-    <Compile Include="Internal\Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
     <Compile Include="Configuration\Dsl\WinServiceSettings.cs" />
