--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -64,11 +64,12 @@
     </Compile>
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CommandLine\RunCommand.cs" />
-    <Compile Include="Commands\WinService\RunCommand.cs" />
+    <Compile Include="Commands\WinService\ServiceCommand.cs" />
     <Compile Include="Commands\WinService\SubCommands\InstallService.cs" />
     <Compile Include="Commands\WinService\SubCommands\ServiceName.cs" />
     <Compile Include="Commands\WinService\SubCommands\UninstallService.cs" />
     <Compile Include="ActivatorServiceLocator.cs" />
+    <Compile Include="Commands\WinService\SubCommands\WinServiceHelper.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Configuration\Dsl\IIsolatedServiceConfigurator.cs" />
     <Compile Include="Configuration\Dsl\IsolatedServiceConfigurator.cs" />
@@ -95,7 +96,7 @@
     <Compile Include="TopshelfArguments.cs" />
     <Compile Include="Model\ServiceInformation.cs" />
     <Compile Include="Model\ServiceState.cs" />
-    <Compile Include="Configuration\Dsl\Credentials.cs" />
+    <Compile Include="Configuration\Credentials.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
     <Compile Include="Commands\WinService\SubCommands\HostServiceInstaller.cs">
       <SubType>Component</SubType>
@@ -108,7 +109,7 @@
     <Compile Include="Configuration\Dsl\KnownServiceNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
-    <Compile Include="Configuration\Dsl\WinServiceSettings.cs" />
+    <Compile Include="Configuration\WinServiceSettings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
